# cnes

./: .gitignore  CMakeLists.txt  CMakeSettings.json  MMC1.h  NROM.h  UNROM.h  bit.h  cartridge.h  cnes.sln  cnes.vcxproj  cnes.vcxproj.filters  disasm.c  emulating_the_nes.md  fake6502.c  fake6502.h  ines.c  ines.h  main.c  nes001.c  nes001.h  ppu.c  ppu.h  window.c  window.h
cnes/: CMakeLists.txt  NROM.h  apu.c  apu.cpp  apu.h  bit.h  disasm.c  disasm.h  fake6502.c  fake6502.h  nes001.c  nes001.h  ppu.c  ppu.h  stream.h
cnes/include/: cnes.h
cnes/mappers/: ColorDreams.c  ColorDreams.h  MMC1.c  MMC1.h  MMC2.c  MMC2.h  MMC3.c  MMC3.h  NROM.c  NROM.h  UNROM.c  UNROM.h
glstuff/: glad.c
shaders/: crt.glsl
winnes/: CMakeLists.txt  CMakeSettings.json  joystick.c  joystick.cpp  joystick.h  main.c  main.cpp  resource.h  waveout.c  waveout.h  window.c  window.cpp  window.h  winnes.aps  winnes.rc
winnes/glstuff/: glad.h
winnes/roms/: ducktales.nes.sav
